Fix T68375: Polyline: can not make segment (cyclic)

Reviewers: campbellbarton

Maniphest Tasks: T68375

Differential Revision: https://developer.blender.org/D5438